--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: generic
 services: docker
 script:
   - docker run --mount src=$TRAVIS_BUILD_DIR,target=/usr/src/tex,type=bind dxjoke/tectonic-docker
-    /bin/sh -c "tectonic cv-johannes-smit.tex.tex"
+    /bin/sh -c "tectonic cv-johannes-smit.tex"
 deploy:
   provider: releases
   api_key:
